# EindOpdracht-IoT-Technologie

./: ContainerStartup.sh  Dockerfile  HTTPS_CRUD.py  README.md  UpdateContainerScript-Timer.sh  app.py  containerstartupscript.service  database_request.py  helloworld.py  pyproject.toml  reqtesttime.py  reqtesttimestampbasecode.py  server_put_req_working.py
.github/workflows/: AllLabels.yml  ClosingIssue.yml  Labels.yml  app_deployment.yml  blank.yml  blanktwee.yml  closedIssue.yml
etc/systemd/system/: containerstartupscript.service
home/xilinx/StartupScript/: ContainerStartup.sh  UpdateContainerScript-Timer.sh
